--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ details {
   background: #ffffff;
   border: 1px solid #e0e0e0;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   margin-bottom: 1rem;
   transition: transform 0.2s, box-shadow 0.2s;
 }
@@ -152,6 +152,43 @@ summary {
   cursor: pointer;
 }
 
+.icon {
+  display: block;
+  position: relative;
+  width: 24px;
+  margin-left: 6px;
+  flex-shrink: 0;
+  transform-origin: center 43%;
+  transition: transform 0.4s;
+  transform: rotate(-90deg);
+}
+
+/* アコーディオンが開いた時のスタイル */
+details[open] .icon {
+  transform: rotate(0deg);
+}
+
+/* アイコンのバーのスタイル */
+.icon::before,
+.icon::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 15px;
+  height: 3px;
+  background-color: #87858d;
+}
+
+.icon::before {
+  left: 0;
+  transform: rotate(45deg);
+}
+
+.icon::after {
+  right: 0;
+  transform: rotate(-45deg);
+}
+
 .rss-section {
   padding: 1rem;
   background: #ffffff;
@@ -160,6 +197,22 @@ summary {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin-bottom: 1rem;
   transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.pre-registered-rss-section {
+  padding: 1rem;
+  background: #ffffff;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  margin-bottom: 1rem;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.pre-registered-rss-section h2 {
+  margin-top: 0;
+  font-size: 1.25rem;
+  color: #333;
 }
 
 .episode-section {
